Apply rule "Prefer java.util.Set.of()"