@@ -1,6 +1,7 @@
 package com.google.common.collect;
 
 import java.util.Collections;
+import java.util.Set;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -31,7 +32,7 @@ class TableUtilTest {
 	@Test
 	void testCellSet() {
 		//
-		Assertions.assertEquals(Collections.emptySet(), TableUtil.cellSet(ImmutableTable.of()));
+		Assertions.assertEquals(Set.of(), TableUtil.cellSet(ImmutableTable.of()));
 		//
 	}
 
